--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react-dom": "^16.9.8",
     "jszip": "^3.5.0",
     "react": "^16.13.1",
+    "react-ace": "^9.1.2",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.9.7",
