--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "ace-builds": "^1.4.12",
     "jszip": "^3.5.0",
     "react": "^16.13.1",
     "react-ace": "^9.1.2",
