--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,6 +13,11 @@
       "sizes": "192x192"
     },
     {
+      "src": "logo300.png",
+      "type": "image/png",
+      "sizes": "300x300"
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
